<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ILovePPP</string>
    <string name="empty">empyt</string>
    <string name="save_to_my_collect">保存到我的收藏</string>
    <string name="delete_from_my_collect">从我的收藏删除</string>
    <string name="subject_mode">主题模式</string>
    <string name="collected_section">精华区</string>
    <string name="collect">收藏</string>
    <string name="desc">description</string>

</resources>