<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="45dip"
    android:background="@color/background"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dip"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:contentDescription="@string/desc"
        android:background="@drawable/ic_1_navigation_back" />

    <TextView
        android:id="@+id/subject"
        android:layout_marginLeft="10dip"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/subject_mode"
        android:textColor="@color/white"
        android:textSize="20sp" 
         android:singleLine="true"
        android:layout_weight="1">
    </TextView>

    <TextView
        android:id="@+id/collect"
        android:layout_marginLeft="10dip"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/collected_section"
        android:textColor="@color/white"
        android:textSize="20sp" 
         android:singleLine="true"
        android:layout_weight="1">
    </TextView>

    <TextView
        android:id="@+id/mysaved"
        android:layout_marginLeft="10dip"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/collect"
        android:textColor="@color/white"
        android:textSize="20sp" 
        android:singleLine="true"
        android:layout_weight="1">
    </TextView>
    
    <!-- 
    <TextView
        android:id="@+id/upload"
        android:layout_marginLeft="10dip"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="新上载区"
        android:textSize="20sp" >
    </TextView>
     -->
     <ImageButton
        android:id="@+id/exit"
        android:contentDescription="@string/desc"
        android:layout_width="40dip"
        android:layout_height="fill_parent"
        android:background="@drawable/ic_1_navigation_cancel" />

</LinearLayout>